--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #fffaf5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo img {
+  width: 40%; /* Adjust the width of your logo image */
+  height: 100%;
+}
+
+.header {
+  padding: 1%;
+}
+
+.bottom {
+  height: 650px;
+  padding: 1%;
+}
+
+.sidebar {
+  height: 100%;
+}
+
+.card-secondary-body {
+  font-size: 15px;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  /* background-color: #403cb3; */
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.percentage {
+  margin-left: 16px;
+}
+
+.vl {
+  border-left: 3px solid green;
+  height: 30px;
+}
+
+.badge {
+  background-color: rgb(66, 203, 112);
+  padding: 4px 8px;
+  text-align: left;
+  border-radius: 5px;
 }
